--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,5 @@
   package = "@netlify/plugin-nextjs"
 
 [template.environment]
-  NEXT_PUBLIC_WIX_CLIENT_ID = "Wix Headless Client ID"
+  WIX_CLIENT_ID = "Wix Headless Client ID"
   WIX_REFRESH_TOKEN = "A refresh token for admin access"
