--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^4.18.0",
     "@wix/ecom": "^1.0.1277",
     "@wix/sdk": "^1.5.7",
     "@wix/stores": "^1.0.498",
     "@wix/wix-ui-icons-common": "^3.12.0",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
-    "flowbite-react": "^0.4.4",
     "js-cookie": "^3.0.1",
+    "lucide-react": "^0.534.0",
     "next": "13.4.9",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-day-picker": "^8.5.1",
     "react-dom": "^18",
-    "react-google-recaptcha-enterprise": "^1.0.3"
+    "react-google-recaptcha-enterprise": "^1.0.3",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
@@ -40,7 +48,9 @@
     "eslint": "^8",
     "eslint-config-next": "^13.4.9",
     "postcss": "^8",
+    "shadcn-ui": "^0.9.5",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
