changed header, changed hero, added new section, fixed mobile version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@/components/ui/*": [
+        "./app/components/ui/*"
       ]
     },
     "forceConsistentCasingInFileNames": true
