--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "gsap": "^3.13.0",
     "js-cookie": "^3.0.1",
     "lucide-react": "^0.534.0",
     "next": "13.4.9",
