--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^4.18.0",
+    "@wix/data": "^1.0.274",
     "@wix/ecom": "^1.0.1277",
     "@wix/sdk": "^1.5.7",
     "@wix/stores": "^1.0.498",
