--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Copy this to .env.local and fill in your values
 
 # Base URL for your site (used for SEO, sitemaps, and structured data)
-NEXT_PUBLIC_BASE_URL=https://yoursite.com
+NEXT_PUBLIC_BASE_URL=https://papercompany.com
 
 # Wix configuration (existing)
 WIX_CLIENT_ID=your_wix_client_id
